--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,9 @@ jobs:
           cd /usr/src/gtest
           sudo cmake CMakeLists.txt
           sudo make
-          sudo cp *.a /usr/lib
+          
+          # Instead of copying from the wrong directory, specify the correct one
+          sudo cp /usr/src/gtest/build/lib/*.a /usr/lib
 
       # Clean the build directory to remove previous CMake cache
       - name: Clean the build directory
